--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
+### Swift ###
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
+
+## Custom
+.DS_Store
 
 ## Build generated
 build/
@@ -37,7 +41,7 @@ playground.xcworkspace
 # Add this line if you want to avoid checking in source code from Swift Package Manager dependencies.
 # Packages/
 # Package.pins
-# Package.resolved
+Package.resolved
 .build/
 
 # CocoaPods
@@ -46,10 +50,10 @@ playground.xcworkspace
 # you should judge for yourself, the pros and cons are mentioned at:
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
-# Pods/
+Pods/
 #
 # Add this line if you want to avoid checking in source code from the Xcode workspace
-# *.xcworkspace
+*.xcworkspace
 
 # Carthage
 #
@@ -57,10 +61,6 @@ playground.xcworkspace
 # Carthage/Checkouts
 
 Carthage/Build
-
-# Accio dependency management
-Dependencies/
-.accio/
 
 # fastlane
 #
@@ -74,9 +74,4 @@ fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
 
-# Code Injection
-#
-# After new code Injection tools there's a generated folder /iOSInjectionProject
-# https://github.com/johnno1962/injectionforxcode
-
-iOSInjectionProject/
+# End of https://www.gitignore.io/api/swift,cocoapods
