--- a/Configs/Makefile
+++ b/Configs/Makefile
@@ -2,14 +2,16 @@
 all: help
 
 help:
+	@echo " - outdated           Show outdated Swift packages"
 	@echo " - pre-commit:        Place pre-commit hook locally"
 	@echo " - tools:             Install developer tools"
 
-SWIFTFORMAT_PATH=$(shell which swiftformat)
+outdated:
+	mint run swift-outdated
 
 pre-commit:
-	echo "#!/bin/bash" > .git/hooks/pre-commit
-	echo "./.git-format-staged --formatter \"$(SWIFTFORMAT_PATH) stdin --stdinpath '{}'\" \"*.swift\"" > .git/hooks/pre-commit
+	mkdir -p .git/hooks/pre-commit
+	cp .scripts/pre-commit .git/hooks/pre-commit
 	chmod +x .git/hooks/pre-commit
 	
 tools:
