--- a/Configs/swiftlint.yml
+++ b/Configs/swiftlint.yml
@@ -1,199 +1,205 @@
 #* = Custom settings below
 only_rules:
-    # Enable to tidy up at some point in the future
-    # - accessibility_label_for_image
-    # - accessibility_trait_for_button
-    # - legacy_objc_type
-    - array_init
-    # - blanket_disable_command
-    - block_based_kvo
-    - class_delegate_protocol
-    - closing_brace
-    - closure_spacing
-    - collection_alignment
-    - colon
-    - comma
-    - comma_inheritance
-    - compiler_protocol_init
-    - computed_accessors_order
-    - contains_over_filter_count
-    - contains_over_filter_is_empty
-    - contains_over_first_not_nil
-    - contains_over_range_nil_comparison
-    - control_statement
-    - convenience_type
-    - deployment_target #*
-    - direct_return
-    - discarded_notification_center_observer
-    - discouraged_assert
-    - discouraged_direct_init
-    - discouraged_object_literal
-    # - discouraged_optional_boolean
-    - discouraged_optional_collection
-    - duplicate_conditions
-    - duplicate_enum_cases
-    - duplicate_imports
-    - duplicated_key_in_dictionary_literal
-    - dynamic_inline
-    - empty_collection_literal
-    - empty_count
-    - empty_enum_arguments
-    - empty_parameters
-    - empty_parentheses_with_trailing_closure
-    - empty_string
-    - explicit_init
-    - fatal_error_message
-    - file_name_no_space
-    - first_where
-    - flatmap_over_map_reduce
-    - for_where
-    # - force_cast
-    # - force_try
-    # - force_unwrapping
-    - generic_type_name
-    - identical_operands
-    - implicit_getter
-    # - implicit_return
-    - invalid_swiftlint_command
-    - is_disjoint
-    - joined_default_parameter
-    - large_tuple #*
-    - last_where
-    - legacy_cggeometry_functions
-    - legacy_constant
-    - legacy_constructor
-    - legacy_hashing
-    - legacy_multiple
-    - legacy_nsgeometry_functions
-    - legacy_random
-    - literal_expression_end_indentation
-    - local_doc_comment
-    - lower_acl_than_parent
-    - mark
-    - modifier_order
-    - multiline_arguments
-    - multiline_function_chains
-    - multiline_literal_brackets
-    - multiline_parameters
-    - no_extension_access_modifier
-    - no_fallthrough_only
-    - no_space_in_method_call
-    - ns_number_init_as_function_reference
-    - nsobject_prefer_isequal
-    - number_separator
-    - operator_usage_whitespace
-    - operator_whitespace
-    - optional_enum_case_matching
-    - orphaned_doc_comment
-    - overridden_super_call
-    - pattern_matching_keywords
-    - period_spacing
-    - prefer_self_type_over_type_of_self
-    - prefer_zero_over_explicit_init
-    - private_over_fileprivate
-    - private_unit_test
-    - prohibited_interface_builder
-    - prohibited_super_call
-    - protocol_property_accessors_order
-    - reduce_boolean
-    - reduce_into
-    - redundant_discardable_let
-    - redundant_nil_coalescing
-    - redundant_objc_attribute
-    - redundant_optional_initialization
-    - redundant_self_in_closure
-    - redundant_set_access_control
-    - redundant_string_enum_value
-    - redundant_type_annotation
-    - redundant_void_return
-    - return_arrow_whitespace
-    - return_value_from_void_function
-    - self_in_property_initialization
-    - shorthand_operator
-    # - shorthand_optional_binding 5.9
-    - sorted_first_last
-    - sorted_imports
-    - statement_position
-    - static_operator
-    - superfluous_disable_command
-    # - superfluous_else
-    - switch_case_alignment
-    # - switch_case_on_newline
-    - syntactic_sugar
-    - todo
-    - toggle_bool
-    - trailing_comma #*
-    - trailing_newline
-    - trailing_semicolon
-    - type_name
-    - unavailable_condition
-    - unavailable_function
-    - unhandled_throwing_task
-    - unneeded_break_in_switch
-    - unneeded_parentheses_in_closure_argument
-    - unneeded_synthesized_initializer
-    - unowned_variable_capture
-    - untyped_error_in_catch
-    - unused_closure_parameter
-    - unused_control_flow_label
-    - unused_enumerated
-    - unused_optional_binding
-    - unused_setter_value
-    - vertical_parameter_alignment
-    - vertical_whitespace
-    - vertical_whitespace_between_cases
-    - vertical_whitespace_opening_braces
-    - void_function_in_ternary
-    - void_return
-    - xctfail_message
-    - yoda_condition
-    - custom_rules
+  # Enable to tidy up at some point in the future
+  # - accessibility_label_for_image
+  # - accessibility_trait_for_button
+  # - legacy_objc_type
+  - array_init
+  # - blanket_disable_command
+  - block_based_kvo
+  - class_delegate_protocol
+  - closing_brace
+  - closure_spacing
+  - collection_alignment
+  - colon
+  - comma
+  - comma_inheritance
+  - compiler_protocol_init
+  - computed_accessors_order
+  - contains_over_filter_count
+  - contains_over_filter_is_empty
+  - contains_over_first_not_nil
+  - contains_over_range_nil_comparison
+  - control_statement
+  - convenience_type
+  - deployment_target #*
+  - direct_return
+  - discarded_notification_center_observer
+  - discouraged_assert
+  - discouraged_direct_init
+  - discouraged_object_literal
+  # - discouraged_optional_boolean
+  - discouraged_optional_collection
+  - duplicate_conditions
+  - duplicate_enum_cases
+  - duplicate_imports
+  - duplicated_key_in_dictionary_literal
+  - dynamic_inline
+  - empty_collection_literal
+  - empty_count
+  - empty_enum_arguments
+  - empty_parameters
+  - empty_parentheses_with_trailing_closure
+  - empty_string
+  - explicit_init #*
+  - fatal_error_message
+  - file_name_no_space
+  - first_where
+  - flatmap_over_map_reduce
+  - for_where
+  # - force_cast
+  # - force_try
+  # - force_unwrapping
+  - generic_type_name
+  - identical_operands
+  - implicit_getter
+  # - implicit_return
+  - invalid_swiftlint_command
+  - is_disjoint
+  - joined_default_parameter
+  - large_tuple #*
+  - last_where
+  - legacy_cggeometry_functions
+  - legacy_constant
+  - legacy_constructor
+  - legacy_hashing
+  - legacy_multiple
+  - legacy_nsgeometry_functions
+  - legacy_random
+  - literal_expression_end_indentation
+  - local_doc_comment
+  - lower_acl_than_parent
+  - mark
+  - modifier_order
+  - multiline_arguments
+  - multiline_function_chains
+  - multiline_literal_brackets
+  - multiline_parameters
+  - no_extension_access_modifier
+  - no_fallthrough_only
+  #   - no_magic_numbers
+  - no_space_in_method_call
+  - ns_number_init_as_function_reference
+  - nsobject_prefer_isequal
+  - number_separator
+  - operator_usage_whitespace
+  - operator_whitespace
+  - optional_enum_case_matching
+  - orphaned_doc_comment
+  - overridden_super_call
+  - pattern_matching_keywords
+  - period_spacing
+  - prefer_self_type_over_type_of_self
+  - prefer_zero_over_explicit_init
+  - private_over_fileprivate
+  #   - private_swiftui_state_property
+  - private_unit_test
+  - prohibited_interface_builder
+  - prohibited_super_call
+  - protocol_property_accessors_order
+  - reduce_boolean
+  - reduce_into
+  - redundant_discardable_let
+  - redundant_nil_coalescing
+  - redundant_objc_attribute
+  - redundant_optional_initialization
+  - redundant_self_in_closure
+  - redundant_set_access_control
+  - redundant_string_enum_value
+  - redundant_type_annotation
+  - redundant_void_return
+  - return_arrow_whitespace
+  - return_value_from_void_function
+  - self_in_property_initialization
+  - shorthand_operator
+  # - shorthand_optional_binding 5.9
+  - sorted_first_last
+  - sorted_imports
+  - statement_position
+  - static_operator
+  - superfluous_disable_command
+  # - superfluous_else
+  - switch_case_alignment
+  # - switch_case_on_newline
+  - syntactic_sugar
+  - todo
+  - toggle_bool
+  - trailing_comma #*
+  - trailing_newline
+  - trailing_semicolon
+  - type_name
+  - unavailable_condition
+  - unavailable_function
+  - unhandled_throwing_task
+  - unneeded_break_in_switch
+  - unneeded_override
+  - unneeded_parentheses_in_closure_argument
+  - unneeded_synthesized_initializer
+  - unowned_variable_capture
+  - untyped_error_in_catch
+  - unused_closure_parameter
+  - unused_control_flow_label
+  - unused_enumerated
+  - unused_optional_binding
+  - unused_setter_value
+  - vertical_parameter_alignment
+  - vertical_whitespace
+  - vertical_whitespace_between_cases
+  - vertical_whitespace_opening_braces
+  - void_function_in_ternary
+  - void_return
+  - xctfail_message
+  - yoda_condition
+  - custom_rules
 
 # deployment_target:
-#     iOS_deployment_target: 15.0
-#     macOS_deployment_target: 11.0
+#     iOS_deployment_target:
+#     macOS_deployment_target:
 #     tvOS_deployment_target:
 #     watchOS_deployment_target:
 
+explicit_init:
+  include_bare_init: true
+
 large_tuple:
-    warning: 3
-    error: 4
+  warning: 3
+  error: 4
 
 trailing_comma:
-    mandatory_comma: true
+  mandatory_comma: true
 
 type_name:
-    min_length: 0
-    max_length: 1000
-    allowed_symbols: [_]
+  min_length: 0
+  max_length: 1000
+  allowed_symbols: [_]
 
 excluded:
-    - Carthage
-    - Pods
-    - .build
-    - .git
-    - "*.generated.swift"
+  - Carthage
+  - Pods
+  - .build
+  - .git
+  - "*.generated.swift"
 
 custom_rules:
-    init_with_class_name:
-        name: "Init With Class Name"
-        message: "Prefer Class() over .init()"
-        included: ".*.swift"
-        regex: '(?<!self|super)\.init\('
-        match_kinds:
-            - identifier
-            - keyword
-        severity: warning
-    no_objcMembers:
-        name: "@objcMembers"
-        regex: "@objcMembers"
-        message: "Explicitly use @objc on each member you want to expose to Objective-C"
-        severity: error
-    disable_print:
-        included: ".*\\.swift"
-        name: "Print usage"
-        regex: "(\\bprint|\\bdebugPrint|\\bdump|Swift\\.print|Swift\\.debugPrint|Swift\\.dump)\\s*\\("
-        match_kinds:
-            - identifier
-        message: "Don't commit `print(…)`, `debugPrint(…)`, or `dump(…)` as they write to standard out in release. Use a logger`"
-        severity: warning
+  #   init_with_class_name:
+  #     name: "Init With Class Name"
+  #     message: "Prefer Class() over .init()"
+  #     included: ".*.swift"
+  #     regex: '(?<!self|super)\.init\('
+  #     match_kinds:
+  #       - identifier
+  #       - keyword
+  #     severity: warning
+  no_objcMembers:
+    name: "@objcMembers"
+    regex: "@objcMembers"
+    message: "Explicitly use @objc on each member you want to expose to Objective-C"
+    severity: error
+  disable_print:
+    included: ".*\\.swift"
+    name: "Print usage"
+    regex: "(\\bprint|\\bdebugPrint|\\bdump|Swift\\.print|Swift\\.debugPrint|Swift\\.dump)\\s*\\("
+    match_kinds:
+      - identifier
+    message: "Don't commit `print(…)`, `debugPrint(…)`, or `dump(…)` as they write to standard out in release. Use a logger`"
+    severity: warning
